Fix hours list wrap issue

--- a/css/style.css
+++ b/css/style.css
@@ -771,7 +771,7 @@ input, textarea, select {
 
 .about-img-main img {
     width: 100%;
-    height: 800px;
+    height: 750px;
     object-fit: cover;
     transition: var(--transition-medium);
     transform: translateZ(0);
